fixed problem with data for new data set, and fixed set_up.jl

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 # gp data file    #
 ###################
 DWPSDE model/fited_gp_simdata.jld
-DWPSDE model/fited_gp_newdata.jld
+DWPSDE model/fited_gp_new_data.jld
